--- a/src/Componentes/css/header.css
+++ b/src/Componentes/css/header.css
@@ -5,14 +5,19 @@
     list-style:none;
 }
 
+
+::-webkit-scrollbar{
+    width:10px;
+}
+
+::-webkit-scrollbar-thumb{
+    background-color: #f3c950;
+}
+
 .header{
-    position:fixed;
-    top: 0;
-    left: 0;
-    background-color:#4D3621;
+    background-color: rgb(28,29,57);
+    padding:30px 0px;
     width: 100%;
-    height:70px;
-    border-bottom:2px solid #2A2A2A;
 }
 
 .navegation{
@@ -24,7 +29,7 @@
 }
 
 .logo{
-    color:#7D5220;
+    color: #f3c950;
     font-size:2.4rem;
     font-weight:bold;
     font-family: 'Kotta One', serif;
@@ -41,15 +46,16 @@
 
 .menu a{
     cursor: pointer;
-    color:white;
-    font-size:1.2rem;
+    color:#d5dbf3;
+    font-size:1.5rem;
     font-weight:bold;
     transition: .2s; 
     text-decoration: none;
+    transition: .5s;
 }
 
 .menu a:hover{
-    border-bottom:1px solid #7D5220;
-    color:#7D5220;
+    border-bottom:1px solid #fff;
+    color:#fff;
 }
 
