--- a/src/css/sections.css
+++ b/src/css/sections.css
@@ -279,7 +279,7 @@ img {
 .project_section .project__tools__list li,
 .project_section .project__links__list li {
   width: 40px;
-  height: 40px
+  height: 40px;
 }
 
 .project_section .project__links__list button {
